IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4/9/15: Fixed Batchruntomo to scale fine alignment shifts by the prealign
binning when combining with the prealign shifts (In 4.7).

3/16/15: Fixed Ccderaser taking mean inside instead of outside boundary
contours (in 4.7).

3/15/15: IMOD_4-7-14
3/15/15: Fixed fixCygPython.sh to put Cygwin on path befor running commands 
(In 4.7).

2/11/15: Fixed Makepyramid to work with one input argument (In 4.7).

2/11/15: Fixed 3dmod Extract File entry being disabled after cancelling the 
file chooser (In 4.7).

2/5/15: IMOD_4-7-13
2/1/15: Fixed robust fitting with whole contours that aren't cut into pieces 
(In 4.7).

1/29/15: Fixed problems with running SIRT with binned K2 data by making eTomo
put out an even size for binned stack and by improving Tilt's evaluation of
whether the tilt axis is centered (In 4.7).

1/10/15: Fixed bug in Imodauto if there are empty boundary contours (In 4.7).

1/3/15: Fixed error in the last interpolation region between strips in 
Ctfphaseflip (In 4.7).

10/25/14: IMOD_4-7-12
10/25/14: Fixed Beadtrack failure if it has to reduce local area target size
(In 4.7).

10/24/14: Stopped Imodauto contouring of exact values from always doing
contours around vales equal to the file maximum (In 4.7).

10/24/14: Removed 100-pixel limit on 10% tapering in Tiltxcorr (In 4.7).

10/17/14: IMOD_4-7-11
10/17/14: In eTomo - Setup Tomogram, added INFO messages about pixel spacing
to the project log (In 4.7).(Bug# 1824)

10/17/14: Added a call to fixCygPython.sh to IMOD installer so it takes care
of the Python link just as the self-installing file does (In 4.7).(Bug# 1821)

10/16/14: Fixed Interpolator for Mac (In 4.7).

10/15/14: In eTomo - Post Processing, removed the lock from the flatten and
squeeze panels that was active when the sum.rec or _full.rec file was missing.
This state should only affect the trimvol panel (In 4.7).(Bug# 1820)
